--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">Anglers Log</string>
     <string name="weigth_in_kg">Weight: %1$s  kg</string>
+    <string name="title_activity_maps">Map</string>
 </resources>
