--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Anglers Log</string>
     <string name="weigth_in_kg">Weight: %1$s  kg</string>
     <string name="title_activity_maps">Map</string>
+    <string name="fishAdded">Fish added</string>
 </resources>
